added security working with aes128 and le secure connections

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,6 @@
 add_executable(${ProjectName}
                   main.c
-                  server_common.c
+                  bridge_common.c
 
 )
 
